--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Things I’d like to buy with my salary</h2>
+	<ol>
+			<li data-ns-test="shoppingList">Laptop</li>
+		    <li data-ns-test="shoppingList">Smart Phone</li>
+		    <li data-ns-test="shoppingList">Smart Watch</li>
+	</ol>
+	<h2>Place I'd like to visit after getting my job</h2>
+	<ol>
+		<li data-ns-test="holidayList">Bengaluru</li>
+		<li data-ns-test="holidayList">Hyderabad</li>
+		<li data-ns-test="holidatList">Nashik</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
