--- a/main.html
+++ b/main.html
@@ -9,17 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h2>Things I’d like to buy with my salary</h2>
-	<ol>
-			<li data-ns-test="shoppingList">Laptop</li>
-		    <li data-ns-test="shoppingList">Smart Phone</li>
-		    <li data-ns-test="shoppingList">Smart Watch</li>
-	</ol>
-	<h2>Place I'd like to visit after getting my job</h2>
-	<ol>
-		<li data-ns-test="holidayList">Bengaluru</li>
-		<li data-ns-test="holidayList">Hyderabad</li>
-		<li data-ns-test="holidatList">Nashik</li>
-	</ol>
+  <ol>
+    <li data-ns-test="shoppingList">Laptop</li>
+    <li data-ns-test="shoppingList">Smartphone</li>
+    <li data-ns-test="shoppingList">Motorbike</li>
+  </ol>
+
+  <h2>Holiday destinations I’d like to visit</h2>
+  <ul>
+    <li data-ns-test="holidayList">Goa</li>
+    <li data-ns-test="holidayList">Paris</li>
+    <li data-ns-test="holidayList">Bali</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
